syntax = "proto3";

package rooms.rpc;

service Rooms {
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse) {}
}

message GetRoomsRequest {
  int64 user_id = 2;
}

message GetRoomsResponse {
  repeated Room rooms = 1;
}

message Room {
  string id = 1;
  string name = 2;
}
